--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+        <a href="index.html">SiteLogo</a>
+        <nav>
+            <ul>
+                <li>
+<a href="index.html">Головна Сторінка</a>
+                </li>
+                <li>
+<a href="work.html">Мої Роботи</a>
+                </li>
+                <li>
+<a href="reviews.html">Відгуки</a>
+                </li>
+                <li>
+<a href="contacts.html">Контакти</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    </header> 
 
+
+    <main>
+        <section>
+            <div class="container">
+                <h1>Timyr Nechyporenko</h1>
+                <img class="index-img" src="img/" alt="My photo">
+                <p>Вітаю на своєму сайті! Я займаюся розробкою сайтів!</p>
+                <ul>
+                    <li>Технології: HTML, CSS, JavaScript.</li>
+                    <li>Я працюю в місті Київ!</li>
+                    <li>Мені 10 років!</li>
+                </ul>
+            </div>
+        </section>
+    </main>
+
+
+    <footer>
+        <div class="container">
+        <nav>
+            <ul>
+                <li>
+<a href="index.html">Головна Сторінка</a>
+                </li>
+                <li>
+<a href="work.html">Мої Роботи</a>
+                </li>
+                <li>
+<a href="reviews.html">Відгуки</a>
+                </li>
+                <li>
+<a href="contacts.html">Контакти</a>
+                </li>
+            </ul>
+        </nav>
+        <a href="index.html">SiteLogo</a>
+    </div>
+    </footer>
+</body>
+</html>
