--- a/contacts.html
+++ b/contacts.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacts</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <a href="index.html">SiteLogo</a>
+        <nav>
+            <ul>
+                <li>
+<a href="index.html">Головна Сторінка</a>
+                </li>
+                <li>
+<a href="work.html">Мої Роботи</a>
+                </li>
+                <li>
+<a href="reviews.html">Відгуки</a>
+                </li>
+                <li>
+<a href="contacts.html">Контакти</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
+</body>
+</html>
