--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <div class="container">
-        <a href="index.html">SiteLogo</a>
+        <a class="index-logo" href="index.html">SiteLogo</a>
         <nav>
-            <ul>
+            <ul class="ul-nav">
                 <li>
 <a href="index.html">Головна Сторінка</a>
                 </li>
@@ -34,8 +34,8 @@
     <main>
         <section>
             <div class="container">
-                <h1>Timyr Nechyporenko</h1>
-                <img class="index-img" src="img/" alt="My photo">
+                <h1 class="index-h1">Timyr Nechyporenko</h1>
+                <img class="index-img" src="https://st2.depositphotos.com/1654249/10180/i/950/depositphotos_101802920-stock-photo-3d-man-lying-down-and.jpg" alt="My photo">
                 <p>Вітаю на своєму сайті! Я займаюся розробкою сайтів!</p>
                 <ul>
                     <li>Технології: HTML, CSS, JavaScript.</li>
@@ -47,25 +47,25 @@
     </main>
 
 
-    <footer>
+    <footer class="index-footer">
         <div class="container">
         <nav>
-            <ul>
+            <ul class="ul-nav2">
                 <li>
-<a href="index.html">Головна Сторінка</a>
+<a class="nav" href="index.html">Головна Сторінка</a>
                 </li>
                 <li>
-<a href="work.html">Мої Роботи</a>
+<a class="nav1" href="work.html">Мої Роботи</a>
                 </li>
                 <li>
-<a href="reviews.html">Відгуки</a>
+<a class="nav2" href="reviews.html">Відгуки</a>
                 </li>
                 <li>
-<a href="contacts.html">Контакти</a>
+<a class="nav3" href="contacts.html">Контакти</a>
                 </li>
             </ul>
         </nav>
-        <a href="index.html">SiteLogo</a>
+        <a class="index-logo2" href="index.html">SiteLogo</a>
     </div>
     </footer>
 </body>
