--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-        <a class="index-logo" href="index.html">SiteLogo</a>
+        <a class="index-logo" href="index.html">WhiteITSide</a>
         <nav>
             <ul class="ul-nav">
                 <li>
@@ -65,7 +65,7 @@
                 </li>
             </ul>
         </nav>
-        <a class="index-logo2" href="index.html">SiteLogo</a>
+        <a class="index-logo2" href="index.html">WhiteITSide</a>
     </div>
     </footer>
 </body>
