--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="container">
                 <h1 class="index-h1">Timyr Nechyporenko</h1>
                 <img class="index-img" src="https://st2.depositphotos.com/1654249/10180/i/950/depositphotos_101802920-stock-photo-3d-man-lying-down-and.jpg" alt="My photo">
-                <p>Вітаю на своєму сайті! Я займаюся розробкою сайтів!</p>
-                <ul>
+                <p class="index-hello">Вітаю на своєму сайті! Я займаюся розробкою сайтів!</p>
+                <ul class="index-info">
                     <li>Технології: HTML, CSS, JavaScript.</li>
                     <li>Я працюю в місті Київ!</li>
                     <li>Мені 10 років!</li>
