--- a/index.html
+++ b/index.html
@@ -1,72 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-        <a class="index-logo" href="index.html">WhiteITSide</a>
-        <nav>
-            <ul class="ul-nav">
-                <li>
-<a href="index.html">Головна Сторінка</a>
-                </li>
-                <li>
-<a href="work.html">Мої Роботи</a>
-                </li>
-                <li>
-<a href="reviews.html">Відгуки</a>
-                </li>
-                <li>
-<a href="contacts.html">Контакти</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-    </header> 
-
-
-    <main>
-        <section>
-            <div class="container">
-                <h1 class="index-h1">Timyr Nechyporenko</h1>
-                <img class="index-img" src="https://st2.depositphotos.com/1654249/10180/i/950/depositphotos_101802920-stock-photo-3d-man-lying-down-and.jpg" alt="My photo">
-                <p class="index-hello">Вітаю на своєму сайті! Я займаюся розробкою сайтів!</p>
-                <ul class="index-info">
-                    <li>Технології: HTML, CSS, JavaScript.</li>
-                    <li>Я працюю в місті Київ!</li>
-                    <li>Мені 10 років!</li>
-                </ul>
-            </div>
-        </section>
-    </main>
-
-
-    <footer class="index-footer">
-        <div class="container">
-        <nav>
-            <ul class="ul-nav2">
-                <li>
-<a class="nav" href="index.html">Головна Сторінка</a>
-                </li>
-                <li>
-<a class="nav1" href="work.html">Мої Роботи</a>
-                </li>
-                <li>
-<a class="nav2" href="reviews.html">Відгуки</a>
-                </li>
-                <li>
-<a class="nav3" href="contacts.html">Контакти</a>
-                </li>
-            </ul>
-        </nav>
-        <a class="index-logo2" href="index.html">WhiteITSide</a>
-    </div>
-    </footer>
-</body>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Project</title> 
+    <link rel="stylesheet" href="style.css"> 
+</head> 
+<body> 
+    <header> 
+        <div class="container header-container"> 
+        <a class="index-logo" href="index.html">WhiteITSide</a> 
+        <nav> 
+            <ul class="ul-nav"> 
+                <li> 
+<a href="index.html" class="header-link">Головна Сторінка</a> 
+                </li> 
+                <li> 
+<a href="work.html" class="header-link">Мої Роботи</a> 
+                </li> 
+                <li> 
+<a href="reviews.html" class="header-link">Відгуки</a> 
+                </li> 
+                <li> 
+<a href="contacts.html" class="header-link">Контакти</a> 
+                </li> 
+            </ul> 
+        </nav> 
+    </div> 
+    </header>  
+ 
+ 
+    <main> 
+        <section> 
+            <div class="container main-container"> 
+                <h1 class="index-h1">Timyr Nechyporenko</h1> 
+                <img class="index-img" src="https://st2.depositphotos.com/1654249/10180/i/950/depositphotos_101802920-stock-photo-3d-man-lying-down-and.jpg" alt="My photo"> 
+                <p class="index-hello">Вітаю на своєму сайті! Я займаюся розробкою сайтів!</p> 
+                <ul class="index-info"> 
+                    <li>Технології: HTML, CSS, JavaScript.</li> 
+                    <li>Я працюю в місті Київ!</li> 
+                    <li>Мені 10 років!</li> 
+                </ul> 
+            </div> 
+        </section> 
+    </main> 
+ 
+ 
+    <footer class="index-footer"> 
+        <div class="container footer-container"> 
+        <nav> 
+            <ul class="ul-nav2"> 
+                <li> 
+<a class="header-link" href="index.html">Головна Сторінка</a> 
+                </li> 
+                <li> 
+<a class="header-link" href="work.html">Мої Роботи</a> 
+                </li> 
+                <li> 
+<a class="header-link" href="reviews.html">Відгуки</a> 
+                </li> 
+                <li> 
+<a class="header-link" href="contacts.html">Контакти</a> 
+                </li> 
+            </ul> 
+        </nav> 
+        <a class="index-logo2" href="index.html">WhiteITSide</a> 
+    </div> 
+    </footer> 
+</body> 
 </html>
