--- a/work.html
+++ b/work.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html">SiteLogo</a>
+        <a class="work-logo" href="index.html">WhiteITSide</a>
         <nav>
-            <ul>
+            <ul class="work-ul-nav">
                 <li>
 <a href="index.html">Головна Сторінка</a>
                 </li>
@@ -27,6 +27,68 @@
             </ul>
         </nav>
     </header>
-      
+      <main>
+        <section class="work">
+            <div class="container work-container">
+                <ul class="work-list">
+                    <li class="work-item">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/ROZETKA-Logo-L3-B-RGB.png/1200px-ROZETKA-Logo-L3-B-RGB.png" alt="Rozetka">
+                        <p>
+                            Український інтернет-магазин та маркетплейс, що з'явився 2005 року[2].
+                        </p>
+                        </li>
+                        <li class="work-item">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Eva_logo.svg/1200px-Eva_logo.svg.png" alt="Eva">
+                            <p>
+                                Мережа магазинів EVA — одна з найбільших торгових мереж, що займається офлайн- та онлайн-торгівлею товарами для краси та здоров'я[2]
+                            </p>
+                        </li>
+
+                            <li class="work-item">
+                                <img src="https://allretail.ua/static/files/originals/c/38/b7f612cb7679be2017b9294941a4d38c.svg" alt="Novus">
+                                <p>
+                                    NOVUS – мережа супермаркетів, торгових центрів і магазинів біля дому, яка динамічно розвивається. Одна із найуспішніших і найперспективніших мультиформатних мереж в Україні.
+                                </p>
+                            </li>
+
+                                <li class="work-item">
+                                    <img src="https://i.citrus.world/uploads/images/creatives/citrus-ua-new-hero.png" alt="Сitrus">
+                                    <p>
+                                        Компания «Цитрус» — первая украинская специализированная сеть магазинов гаджетов и аксессуаров. Компания создана в 2000 году. 
+                                    </p>
+                                    </li>
+                                    <li class="work-item">
+<img src="https://storage.googleapis.com/static-storage/mobile_logo.svg" alt="АНЦ">
+<p>
+    Сеть аптек АНЦ была основана в 2000 году в городе Запорожье. Компания начинала свой путь с аптек обычного формата под брендами Аптека АНЦ и Аптека Благодия. Компания быстро развивалась и только за первые 10 лет было открыто более двухсот аптек.
+</p>
+                                    </li>
+                                    <li class="work-item">
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Epicentrk.svg/80px-Epicentrk.svg.png" alt="Епіцентр">
+                                        <p>
+                                            «Епіцéнтр К» — група компаній в Україні та найбільший непродуктовий рітейлер України, заснована 2003 року.[2] Володіє найбільшою в Україні мережею торговольних центрів ТЦ «Епіцентр»[3] та онлайн-магазином Epicentrk.ua[4][5]. Група є лідером у сегменті роздрібної торгівлі товарами для дому та ремонту на ринку.[6]
+                                        </p>
+                                    </li>
+                                    <header>
+                                        <a class="work-logo" href="index.html">WhiteITSide</a>
+                                        <nav>
+                                            <ul class="work-ul-nav2">
+                                                <li>
+                                <a href="index.html">Головна Сторінка</a>
+                                                </li>
+                                                <li>
+                                <a href="work.html">Мої Роботи</a>
+                                                </li>
+                                                <li>
+                                <a href="reviews.html">Відгуки</a>
+                                                </li>
+                                                <li>
+                                <a href="contacts.html">Контакти</a>
+                                                </li>
+                                            </ul>
+                                        </nav>
+                                    </header>
+
+                    
 </body>
 </html>
