--- a/work.html
+++ b/work.html
@@ -1,94 +1,100 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <a class="work-logo" href="index.html">WhiteITSide</a>
-        <nav>
-            <ul class="work-ul-nav">
-                <li>
-<a href="index.html">Головна Сторінка</a>
-                </li>
-                <li>
-<a href="work.html">Мої Роботи</a>
-                </li>
-                <li>
-<a href="reviews.html">Відгуки</a>
-                </li>
-                <li>
-<a href="contacts.html">Контакти</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-      <main>
-        <section class="work">
-            <div class="container work-container">
-                <ul class="work-list">
-                    <li class="work-item">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/ROZETKA-Logo-L3-B-RGB.png/1200px-ROZETKA-Logo-L3-B-RGB.png" alt="Rozetka">
-                        <p>
-                            Український інтернет-магазин та маркетплейс, що з'явився 2005 року[2].
-                        </p>
-                        </li>
-                        <li class="work-item">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Eva_logo.svg/1200px-Eva_logo.svg.png" alt="Eva">
-                            <p>
-                                Мережа магазинів EVA — одна з найбільших торгових мереж, що займається офлайн- та онлайн-торгівлею товарами для краси та здоров'я[2]
-                            </p>
-                        </li>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Work</title> 
+    <link rel="stylesheet" href="style.css"> 
+</head> 
+<body> 
+    <header>  
+        <div class="container header-container">  
+        <a class="index-logo" href="index.html">WhiteITSide</a>  
+        <nav>  
+            <ul class="ul-nav">  
+                <li>  
+                    <a href="index.html" class="header-link">Головна Сторінка</a>  
+                </li>  
+                <li>  
+                    <a href="work.html" class="header-link">Мої Роботи</a>  
+                </li>  
+                <li>  
+                    <a href="reviews.html" class="header-link">Відгуки</a>  
+                </li>  
+                <li>  
+                    <a href="contacts.html" class="header-link">Контакти</a>  
+                </li>  
+            </ul>  
+        </nav>  
+    </div>  
+    </header>   
+      <main> 
+        <section class="work"> 
+            <div class="container work-container"> 
+                <ul class="work-list"> 
+                    <li class="work-item"> 
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/ROZETKA-Logo-L3-B-RGB.png/1200px-ROZETKA-Logo-L3-B-RGB.png" alt="Rozetka" class="work-img"> 
+                        <p> 
+                            Український інтернет-магазин та маркетплейс, що з'явився 2005 року[2]. 
+                        </p> 
+                    </li> 
+                    <li class="work-item"> 
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Eva_logo.svg/1200px-Eva_logo.svg.png" alt="Eva" class="work-img"> 
+                            <p> 
+                                Мережа магазинів EVA — одна з найбільших торгових мереж, що займається офлайн- та онлайн-торгівлею товарами для краси та здоров'я[2] 
+                            </p> 
+                    </li> 
+                    <li class="work-item"> 
+                                <img src="https://allretail.ua/static/files/originals/c/38/b7f612cb7679be2017b9294941a4d38c.svg" alt="Novus" class="work-img"> 
+                                <p> 
+                                    NOVUS – мережа супермаркетів, торгових центрів і магазинів біля дому, яка динамічно розвивається. Одна із найуспішніших і найперспективніших мультиформатних мереж в Україні. 
+                                </p> 
+                    </li> 
+                    <li class="work-item"> 
+                                    <img src="https://i.citrus.world/uploads/images/creatives/citrus-ua-new-hero.png" alt="Сitrus" class="work-img"> 
+                                    <p> 
+                                        Компания «Цитрус» — первая украинская специализированная сеть магазинов гаджетов и аксессуаров. Компания создана в 2000 году.  
+                                    </p> 
+                     </li> 
+                    <li class="work-item"> 
+<img src="https://storage.googleapis.com/static-storage/mobile_logo.svg" alt="АНЦ" class="work-img"> 
+<p> 
+    Сеть аптек АНЦ была основана в 2000 году в городе Запорожье. Компания начинала свой путь с аптек обычного формата под брендами Аптека АНЦ и Аптека Благодия. Компания быстро развивалась и только за первые 10 лет было открыто более двухсот аптек. 
+</p> 
+                    </li> 
+                    <li class="work-item"> 
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Epicentrk.svg/80px-Epicentrk.svg.png" alt="Епіцентр" class="work-img"> 
+                                        <p> 
+                                            «Епіцéнтр К» — група компаній в Україні та найбільший непродуктовий рітейлер України, заснована 2003 року.[2] Володіє найбільшою в Україні мережею торговольних центрів ТЦ «Епіцентр»[3] та онлайн-магазином Epicentrk.ua[4][5]. Група є лідером у сегменті роздрібної
 
-                            <li class="work-item">
-                                <img src="https://allretail.ua/static/files/originals/c/38/b7f612cb7679be2017b9294941a4d38c.svg" alt="Novus">
-                                <p>
-                                    NOVUS – мережа супермаркетів, торгових центрів і магазинів біля дому, яка динамічно розвивається. Одна із найуспішніших і найперспективніших мультиформатних мереж в Україні.
-                                </p>
-                            </li>
-
-                                <li class="work-item">
-                                    <img src="https://i.citrus.world/uploads/images/creatives/citrus-ua-new-hero.png" alt="Сitrus">
-                                    <p>
-                                        Компания «Цитрус» — первая украинская специализированная сеть магазинов гаджетов и аксессуаров. Компания создана в 2000 году. 
-                                    </p>
-                                    </li>
-                                    <li class="work-item">
-<img src="https://storage.googleapis.com/static-storage/mobile_logo.svg" alt="АНЦ">
-<p>
-    Сеть аптек АНЦ была основана в 2000 году в городе Запорожье. Компания начинала свой путь с аптек обычного формата под брендами Аптека АНЦ и Аптека Благодия. Компания быстро развивалась и только за первые 10 лет было открыто более двухсот аптек.
-</p>
-                                    </li>
-                                    <li class="work-item">
-                                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Epicentrk.svg/80px-Epicentrk.svg.png" alt="Епіцентр">
-                                        <p>
-                                            «Епіцéнтр К» — група компаній в Україні та найбільший непродуктовий рітейлер України, заснована 2003 року.[2] Володіє найбільшою в Україні мережею торговольних центрів ТЦ «Епіцентр»[3] та онлайн-магазином Epicentrk.ua[4][5]. Група є лідером у сегменті роздрібної торгівлі товарами для дому та ремонту на ринку.[6]
-                                        </p>
-                                    </li>
-                                    <header>
-                                        <a class="work-logo" href="index.html">WhiteITSide</a>
-                                        <nav>
-                                            <ul class="work-ul-nav2">
-                                                <li>
-                                <a href="index.html">Головна Сторінка</a>
-                                                </li>
-                                                <li>
-                                <a href="work.html">Мої Роботи</a>
-                                                </li>
-                                                <li>
-                                <a href="reviews.html">Відгуки</a>
-                                                </li>
-                                                <li>
-                                <a href="contacts.html">Контакти</a>
-                                                </li>
-                                            </ul>
-                                        </nav>
-                                    </header>
-
-                    
-</body>
+торгівлі товарами для дому та ремонту на ринку.[6] 
+                                        </p> 
+                    </li> 
+                </ul> 
+            </div> 
+        </section> 
+    </main> 
+    <footer class="index-footer">  
+        <div class="container footer-container">  
+        <nav>  
+            <ul class="ul-nav2">  
+                <li>  
+                    <a class="header-link" href="index.html">Головна Сторінка</a>  
+                </li>  
+                <li>  
+                    <a class="header-link" href="work.html">Мої Роботи</a>  
+                </li>  
+                <li>  
+                    <a class="header-link" href="reviews.html">Відгуки</a>  
+                </li>  
+                <li>  
+                    <a class="header-link" href="contacts.html">Контакти</a>  
+                </li>  
+            </ul>  
+        </nav>  
+        <a class="index-logo2" href="index.html">WhiteITSide</a>  
+    </div>  
+    </footer>  
+</body> 
 </html>
