--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section> 
             <div class="container main-container"> 
                 <h1 class="index-h1">Timyr Nechyporenko</h1> 
-                <img class="index-img" src="https://st2.depositphotos.com/1654249/10180/i/950/depositphotos_101802920-stock-photo-3d-man-lying-down-and.jpg" alt="My photo"> 
+                <img class="index-img" src="img/2023-10-12 12.11.35.jpg" alt="My photo"> 
                 <p class="index-hello">Вітаю на своєму сайті! Я займаюся розробкою сайтів!</p> 
                 <ul class="index-info"> 
                     <li>Технології: HTML, CSS, JavaScript.</li> 
